[package]
name = "rust-server-demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.0", features = ["full"] }
hyper = { version = "0.14.9", features = ["client","server", "stream", "http1", "http2", "runtime"] }
futures-util = { version = "0.3", default-features = false }

